# obs-garmin-replay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  install.bat  uninstall.bat
cmake/: FindVosk.cmake
data/locale/: de-DE.ini  en-US.ini  fr-FR.ini
installer/: installer.iss
src/: plugin-main.c  plugin-main.h
src/audio-capture/: device-enum.c  device-enum.h  wasapi-capture.c  wasapi-capture.h
src/replay-control/: replay-buffer.c  replay-buffer.h
src/settings/: plugin-settings.c  plugin-settings.h  properties-ui.c  properties-ui.h  settings-dialog.cpp  settings-dialog.hpp
src/voice-recognition/: phrase-detector.c  phrase-detector.h  vosk-engine.c  vosk-engine.h
